--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,31 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Environment variables
+.env
+.env.local
+.env.production
+.env.development
+
+# Stripe PHP Library
+api/vendor/
+api/stripe-php/
+api/composer.lock
+
+# PHP
+*.cache
+.phpunit.result.cache
+
+# Documentação (arquivos markdown)
+*.md
+!README.md
+
+# Arquivos de teste
+test-*.php
+*-test.php
+test-*.html
+*-test.html
+test/
+tests/
+__tests__/
