chore: Atualizar .gitignore e remover arquivos desnecessÃ¡rios
- Adicionar *.txt na raiz ao gitignore
- Adicionar scripts de build ao gitignore
- Adicionar arquivos ZIP ao gitignore
- Remover arquivos de build e deploy do repositÃ³rio
- Manter apenas cÃ³digo fonte e documentaÃ§Ã£o essencial

--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,19 @@ api/composer.lock
 *.md
 !README.md
 
+# Arquivos de texto na raiz
+/*.txt
+
+# Scripts de build
+build-producao.bat
+build-producao.sh
+
+# Arquivos de deploy
+*.zip
+dressme-deploy/
+deploy-producao/
+deploy-temp/
+
 # Arquivos de teste
 test-*.php
 *-test.php
